flang/test/Flang-Driver/missing-input.f90
! RUN: not %flang-new  2>&1 | FileCheck %s

! REQUIRES: new-flang-driver

! CHECK: error: no input files
